Adding Armatures takes an increasing amount of logic time #45544

Closed
opened 2015-07-24 00:53:24 +02:00 by mobious · 5 comments

System Information
Windows 7 64-bit
Intel HD Graphics 4000

Blender Version
Broken: 2.75 c6b042b
Worked: 2.70 19e627c

Files
adding_armature_performance.blend -- Contains an empty that adds and immediately removes 10 armature objects every frame.

Short description of error
The time it takes to add an armature object increases as the number of armatures that have been added over the course of the game increases.

Exact steps for others to reproduce the error
Open the attached file and start the game engine. Note how the logic usage starts out low but very quickly increase to very large values. On my machine the logic time increases from ~1ms to over 100ms in less than 10 seconds.

Additional Notes

  • The problem does not occur when adding non-armature objects
  • The performance hit persists as long as Blender is open. e.g. when you stop the engine and start it again without closing Blender, the logic usage will immediately jump back to its previous level instead of starting low.
  • The performance hit only takes place during calls to scene.addObject() when the added object is an armature. e.g. after adding many armatures, changing the added object to the default cube will result it normal logic usage. Resuming adding armatures will increase the logic usage again.
**System Information** Windows 7 64-bit Intel HD Graphics 4000 **Blender Version** Broken: 2.75 c6b042b Worked: 2.70 19e627c **Files** [adding_armature_performance.blend](https://archive.blender.org/developer/F212027/adding_armature_performance.blend) -- Contains an empty that adds and immediately removes 10 armature objects every frame. **Short description of error** The time it takes to add an armature object increases as the number of armatures that have been added over the course of the game increases. **Exact steps for others to reproduce the error** Open the attached file and start the game engine. Note how the logic usage starts out low but very quickly increase to very large values. On my machine the logic time increases from ~1ms to over 100ms in less than 10 seconds. **Additional Notes** - The problem does not occur when adding non-armature objects - The performance hit persists as long as Blender is open. e.g. when you stop the engine and start it again without closing Blender, the logic usage will immediately jump back to its previous level instead of starting low. - The performance hit only takes place during calls to scene.addObject() when the added object is an armature. e.g. after adding many armatures, changing the added object to the default cube will result it normal logic usage. Resuming adding armatures will increase the logic usage again.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mobious

Added subscriber: @mobious

Added subscriber: @JacobMerrill-1

Added subscriber: @JacobMerrill-1

This issue was referenced by d2fac7df32

This issue was referenced by d2fac7df32889a8a8da2f08f0b7c7af6869fb888

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45544
No description provided.