BGE: Fix T45544 Adding Armatures takes an increasing amount of logic time

Armatures were not totaly freed (only the armature object not the armature) and the original armature user count was not decrease after replication.